feat: add form html code

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="container">
+        <h1>My Favorite Movie</h1>
+
+        <form  id="form" class="my-form">
+            <input type="text" name="name" placeholder="name" id="name-input">
+            <input type="text" name="rate" placeholder="rate" id="rate-input">
+            <button type="submit">add</button>
+        </form>
+
+    
+    </div>
     <script src="./app.js"></script>
 </body>
 </html>
