feat: add table  html code

--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@
             <button type="submit">add</button>
         </form>
 
-    
+        <table class="table">
+            <thead>
+            <tr>
+                <th id="soart-name">name</th>
+                <th id="soart-rate">rate</th>
+                <th>action</th>
+            </tr>
+            </thead>
+            <tbody id="body-table">
+
+
+            </tbody>
+        </table>
     </div>
     <script src="./app.js"></script>
 </body>
