feat:defind all variebles

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <div class="container">
       <h1>My Favorite Movie</h1>
 
-      <form id="form" class="my-form">
+      <form id="form-add-movie" class="my-form">
         <input type="text" name="name" placeholder="name" id="name-input" />
         <input type="text" name="rate" placeholder="rate" id="rate-input" />
         <button type="submit">add</button>
       </form>
-
+      <p class="valid-error"></p>
       <table class="table">
         <thead>
           <tr>
