feat:validate the rate form input

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <form id="form-add-movie" class="my-form">
         <input type="text" name="name" placeholder="name" id="name-input" />
         <input type="text" name="rate" placeholder="rate" id="rate-input" />
-        <button type="submit">add</button>
+        <button id="submit-form"  type="submit">add</button>
       </form>
-      <p class="valid-error"></p>
+      <p id="valid-error"></p>
       <table class="table">
         <thead>
           <tr>
