--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <form id="form-add-movie" class="my-form">
         <input type="text" name="name" placeholder="name" id="name-input" />
         <input type="text" name="rate" placeholder="rate" id="rate-input" />
-        <button id="submit-form"  type="submit">add</button>
+        <button id="submit-form" type="submit">add</button>
       </form>
       <p id="valid-error"></p>
       <table class="table">
@@ -24,15 +24,7 @@
             <th>action</th>
           </tr>
         </thead>
-        <tbody id="body-table">
-          <tr>
-            <td>test</td>
-            <td>test</td>
-            <td class="column-table-delete">
-              <button class="delete-button">Delete</button>
-            </td>
-          </tr>
-        </tbody>
+        <tbody id="body-table"></tbody>
       </table>
     </div>
     <script src="./app.js"></script>
