--- a/index.html
+++ b/index.html
@@ -11,16 +11,22 @@
       <h1>My Favorite Movie</h1>
 
       <form id="form-add-movie" class="my-form">
-        <input type="text" name="name" placeholder="name"  id="name-input" />
-        <input type="text" name="rate"  placeholder="rate" id="rate-input" />
+        <input type="text" name="name" placeholder="name" id="name-input" />
+        <input type="text" name="rate" placeholder="rate" id="rate-input" />
         <button id="submit-form" type="submit">add</button>
       </form>
       <p id="valid-error"></p>
       <table class="table">
         <thead>
           <tr>
-            <th id="sort-name">name</th>
-            <th id="sort-rate">rate</th>
+            <th id="sort-name">
+              name
+              <img src="./sort-icon.png" alt="sorting icon" width="18px"/>
+            </th>
+            <th id="sort-rate">
+              rate
+              <img src="./sort-icon.png" alt="sorting icon" width="18px" />
+            </th>
             <th>action</th>
           </tr>
         </thead>
